navbar-and-main-added

--- a/index.html
+++ b/index.html
@@ -25,44 +25,52 @@
     <div class="container">
       <div class="nav-flex">
         <ul>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <div class="pages">
+            <li><a href="#">Welcome</a></li>
+          </div>
+          <div class="menu">
+            <li>
+              <a href="#"
+                ><img src="images/Icon - Menu.svg" alt="humberger-menu"
+              /></a>
+            </li>
+          </div>
         </ul>
       </div>
       <div class="home-content">
-        <div class="text-1"><h1>Hi there. I’m Yayner</h1></div>
-        <div class="text-2"><h1>I’m a software developer</h1></div>
-        <div class="text-3">
+        <div class="primary">
+          <h1>Hi there. I’m Yayner</h1>
+          <h1 class="software-dev">I’m a software developer</h1>
+        </div>
+        <div class="supporting">
           <p>
-            I can help you build a any kind of product,feature or website Look through some
-            of my work<br />
-            and experience! If you like what you see and have a project you need
-            coded, <br />don’t hestiate to contact me.
+            I can help you build a any kind of product,feature or website Look
+            through some of my work and experience! If you like what you see and
+            have a project you need coded, don’t hestiate to contact me.
           </p>
         </div>
       </div>
       <div class="social-icons">
         <ul>
           <li>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
           </li>
           <li>
             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-angellist"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          </li>
-          <li>
             <a href="#"><i class="fa-solid fa-m"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-angellist"></i></a>
           </li>
         </ul>
       </div>
       <div class="my-recent-works">
-          <h1>My Recent Works</h1>
+        <h1>My Recent Works</h1>
       </div>
     </div>
   </body>
