--- a/index.html
+++ b/index.html
@@ -5,38 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio: setup and mobile version skeleton</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="nav-flex">
-        <ul>
-          <div class="pages">
-            <li><a href="#">Welcome</a></li>
-          </div>
-          <div class="menu">
-            <li>
-              <a href="#"
-                ><img src="images/Icon - Menu.svg" alt="humberger-menu"
-              /></a>
-            </li>
-          </div>
-        </ul>
-      </div>
+    <div class="nav-flex">
+      <ul>
+        <li class="welcom"><a href="#">Welcome</a></li>
+        <li class="menu">
+          <a href="#"
+            ><img src="images/Icon-Menu.svg" alt="humberger-menu"
+          /></a>
+        </li>
+      </ul>
       <div class="home-content">
         <div class="primary">
           <h1>Hi there. I’m Yayner</h1>
