--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio setup and mobile version skeleton</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+    />
   </head>
   <body>
     <div class="nav-flex">
@@ -27,29 +42,31 @@
             have a project you need coded, don’t hestiate to contact me.
           </p>
         </div>
+        <div class="social-icons">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-m"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-angellist"></i></a>
+            </li>
+          </ul>
+        </div>
+        <img src="images/Action.svg" alt="">
+        <div class="my-recent-works">
+          <h1>My Recent Works</h1>
+        </div>
       </div>
-      <div class="social-icons">
-        <ul>
-          <li>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-solid fa-m"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-angellist"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="my-recent-works">
-        <h1>My Recent Works</h1>
-      </div>
+      
     </div>
   </body>
 </html>
