--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
             </li>
           </ul>
         </div>
-        <img src="images/Action.svg" alt="">
+        <img src="images/Action.svg" alt="" />
         <div class="my-recent-works">
           <h1>My Recent Works</h1>
         </div>
       </div>
-      
     </div>
   </body>
 </html>
