--- a/index.html
+++ b/index.html
@@ -24,24 +24,30 @@
   </head>
   <body>
     <div class="nav-flex">
-      <ul>
-        <li class="welcom"><a href="#">Welcome</a></li>
-        <li class="menu">
-          <a href="#"><img src="images/Icon-Menu.svg" alt="humberger" /></a>
-        </li>
-      </ul>
+      <header>
+        <ul>
+          <li class="welcome"><a href="#">Welcome</a></li>
+        </ul>
+        <nav>
+          <ul>
+            <li class="menu">
+              <a href="#"><img src="images/Icon-Menu.svg" alt="humberger" /></a>
+            </li>
+          </ul>
+        </nav>
+      </header>
       <div class="home-content">
-        <div class="primary">
-          <h1>Hi there. I’m Yayner</h1>
-          <p class="software-dev">I’m a software developer</p>
-        </div>
-        <div class="supporting">
-          <p>
+        <section class="primary">
+          <h2>Hi there. I’m Yayner</h2>
+          <h2 class="software-dev">I’m a software developer</h2>
+        </section>
+        <section class="supporting">
+          <h3>
             I can help you build a any kind of product,feature or website Look
             through some of my work and experience! If you like what you see and
             have a project you need coded, don’t hestiate to contact me.
-          </p>
-        </div>
+          </h3>
+        </section>
         <div class="social-icons">
           <ul>
             <li>
@@ -61,9 +67,10 @@
             </li>
           </ul>
         </div>
-        <img src="images/Action.svg" alt="" />
+        <img src="images/Action.svg" alt="action" />
         <div class="my-recent-works">
           <h1>My Recent Works</h1>
+          <img src="images/Indicator.svg" alt="Indicator" />
         </div>
       </div>
     </div>
