Added Portfolio: mobile version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -67,11 +66,167 @@
         </div>
         <img src="images/Action.svg" alt="action" />
         <div class="my-recent-works">
-          <h3>My Recent</h3>
-          <h3>Works</h3>
+          <h3>My Recent Works</h3>
           <img src="images/Indicator.png" alt="Indicator">
         </div>
       </div>
     </div>
+    <!-- ------------------mobile version----------- -->
+    <div class="my-works">
+      <!-- <h1>My Recent Works</h1> -->
+      <!-- <img src="images/Indicator.svg" alt="Indicator" class="indicator" /> -->
+      <div class="works">
+        <div class="work-1">
+          <div class="img-holder"></div>
+          <div class="posts">
+            <h2>Multi-Post Stories Gain+Glory</h2>
+            <div class="flex-post">
+              <ul>
+                <li><a href="#">Ruby on rails</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">HTML</a></li>
+              </ul>
+            </div>
+            <button type="button" class="works-button">See Project</button>
+          </div>
+        </div>
+        <div class="work-2">
+          <div class="img-holder"></div>
+          <div class="posts">
+            <h2>Multi-Post Stories Gain+Glory</h2>
+            <div class="flex-post">
+              <ul>
+                <li><a href="#">Ruby on rails</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">HTML</a></li>
+              </ul>
+            </div>
+            <button type="button" class="works-button">See Project</button>
+          </div>
+        </div>
+        <div class="work-3">
+          <div class="img-holder"></div>
+          <div class="posts">
+            <h2>Multi-Post Stories Gain+Glory</h2>
+            <div class="flex-post">
+              <ul>
+                <li><a href="#">Ruby on rails</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">HTML</a></li>
+              </ul>
+            </div>
+            <button type="button" class="works-button">See Project</button>
+          </div>
+        </div>
+        <div class="work-4">
+          <div class="img-holder"></div>
+          <div class="posts">
+            <h2>Multi-Post Stories Gain+Glory</h2>
+            <div class="flex-post">
+              <ul>
+                <li><a href="#">Ruby on rails</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">HTML</a></li>
+              </ul>
+            </div>
+            <button type="button" class="works-button">See Project</button>
+          </div>
+        </div>
+        <div class="work-5">
+          <div class="img-holder"></div>
+          <div class="posts">
+            <h2>Multi-Post Stories Gain+Glory</h2>
+            <div class="flex-post">
+              <ul>
+                <li><a href="#">Ruby on rails</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">HTML</a></li>
+              </ul>
+            </div>
+            <button type="button" class="works-button">See Project</button>
+          </div>
+        </div>
+        <div class="work-6">
+          <div class="img-holder"></div>
+          <div class="posts">
+            <h2>Multi-Post Stories Gain+Glory</h2>
+            <div class="flex-post">
+              <ul>
+                <li><a href="#">Ruby on rails</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">HTML</a></li>
+              </ul>
+            </div>
+            <button type="button" class="works-button">See Project</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="about-me">
+      <div class="about-me-text">
+        <h2>About Me</h2>
+        <p>
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
+        </p>
+        <button type="button" class="get-resume">Get My Resume</button>
+      </div>
+    </section>
+    <div class="my-knowledge">
+      <section class="languages">
+        <img src="images/lang.svg" alt="languages" />
+        <h2>Languages</h2>
+        <div class="flex-languages">
+          <ul>
+            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">Ruby</a></li>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="frameworks">
+        <img src="images/frameworks.svg" alt="frameworks" />
+        <h2>Frameworks</h2>
+        <div class="flex-frameworks">
+          <ul>
+            <li><a href="#">Bootstrap</a></li>
+            <li><a href="#">Ruby on Rails</a></li>
+            <li><a href="#">RSpec</a></li>
+            <li><a href="#">Copybara</a></li>
+            <li><a href="#">Selenium</a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="skills">
+        <img src="images/skills.svg" alt="skills" />
+        <h2>Skills</h2>
+        <div class="flex-skills">
+          <ul>
+            <li><a href="#">Codekit</a></li>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">Codepen</a></li>
+            <li><a href="#">Gitlab</a></li>
+            <li><a href="#">Terminal</a></li>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div class="contact-me">
+      <div class="contact-me-content">
+        <h3>
+          I'm always interested in hearing about new projects, so if you'd like
+          to chat please get in touch.
+        </h3>
+      </div>
+    </div>
+    <!-- -----------end of mobile version------------- -->
   </body>
 </html>
