comments-from-reviwer-added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             have a project you need coded, don’t hestiate to contact me.
           </h3>
         </section>
-        <div class="social-icons">
+        <section class="social-icons">
           <ul>
             <li>
               <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -63,114 +63,112 @@
               <a href="#"><i class="fa-brands fa-angellist"></i></a>
             </li>
           </ul>
-        </div>
+        </section>
         <img src="images/Action.svg" alt="action" />
         <div class="my-recent-works">
           <h3>My Recent Works</h3>
-          <img src="images/Indicator.png" alt="Indicator">
+          <img src="images/Indicator.svg" alt="Indicator" />
         </div>
       </div>
     </div>
     <!-- ------------------mobile version----------- -->
-    <div class="my-works">
-      <!-- <h1>My Recent Works</h1> -->
-      <!-- <img src="images/Indicator.svg" alt="Indicator" class="indicator" /> -->
-      <div class="works">
-        <div class="work-1">
+    <section class="my-works">
+      <section class="works">
+        <section class="work-1">
           <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
               <ul>
-                <li><a href="#">Ruby on rails</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">HTML</a></li>
+                <li>Ruby on rails</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>HTML</li>
               </ul>
             </div>
             <button type="button" class="works-button">See Project</button>
           </div>
-        </div>
-        <div class="work-2">
+        </section>
+        <section class="work-2">
           <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
               <ul>
-                <li><a href="#">Ruby on rails</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">HTML</a></li>
+                <li>Ruby on rails</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>HTML</li>
               </ul>
             </div>
             <button type="button" class="works-button">See Project</button>
           </div>
-        </div>
-        <div class="work-3">
+        </section>
+        <section class="work-3">
           <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
               <ul>
-                <li><a href="#">Ruby on rails</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">HTML</a></li>
+                <li>Ruby on rails</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>HTML</li>
               </ul>
             </div>
             <button type="button" class="works-button">See Project</button>
           </div>
-        </div>
-        <div class="work-4">
+        </section>
+        <section class="work-4">
           <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
               <ul>
-                <li><a href="#">Ruby on rails</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">HTML</a></li>
+                <li>Ruby on rails</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>HTML</li>
               </ul>
             </div>
             <button type="button" class="works-button">See Project</button>
           </div>
-        </div>
-        <div class="work-5">
+        </section>
+        <section class="work-5">
           <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
               <ul>
-                <li><a href="#">Ruby on rails</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">HTML</a></li>
+                <li>Ruby on rails</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>HTML</li>
               </ul>
             </div>
             <button type="button" class="works-button">See Project</button>
           </div>
-        </div>
-        <div class="work-6">
+        </section>
+        <section class="work-6">
           <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
               <ul>
-                <li><a href="#">Ruby on rails</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">HTML</a></li>
+                <li>Ruby on rails</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>HTML</li>
               </ul>
             </div>
             <button type="button" class="works-button">See Project</button>
           </div>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </section>
     <section class="about-me">
       <div class="about-me-text">
-        <h2>About Me</h2>
+        <h2>About me</h2>
         <p>
           I can help you build a product , feature or website Look through some
           of my work and experience! If you like what you see and have a project
@@ -179,16 +177,16 @@
         <button type="button" class="get-resume">Get My Resume</button>
       </div>
     </section>
-    <div class="my-knowledge">
+    <section class="my-knowledge">
       <section class="languages">
         <img src="images/lang.svg" alt="languages" />
         <h2>Languages</h2>
         <div class="flex-languages">
           <ul>
-            <li><a href="#">JavaScript</a></li>
-            <li><a href="#">Ruby</a></li>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>HTML</li>
+            <li>CSS</li>
           </ul>
         </div>
       </section>
@@ -197,11 +195,11 @@
         <h2>Frameworks</h2>
         <div class="flex-frameworks">
           <ul>
-            <li><a href="#">Bootstrap</a></li>
-            <li><a href="#">Ruby on Rails</a></li>
-            <li><a href="#">RSpec</a></li>
-            <li><a href="#">Copybara</a></li>
-            <li><a href="#">Selenium</a></li>
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>RSpec</li>
+            <li>Copybara</li>
+            <li>Selenium</li>
           </ul>
         </div>
       </section>
@@ -210,23 +208,23 @@
         <h2>Skills</h2>
         <div class="flex-skills">
           <ul>
-            <li><a href="#">Codekit</a></li>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Codepen</a></li>
-            <li><a href="#">Gitlab</a></li>
-            <li><a href="#">Terminal</a></li>
+            <li>Codekit</li>
+            <li>Github</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal</li>
           </ul>
         </div>
       </section>
-    </div>
-    <div class="contact-me">
+    </section>
+    <section class="contact-me">
       <div class="contact-me-content">
         <h3>
           I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
         </h3>
       </div>
-    </div>
+    </section>
     <!-- -----------end of mobile version------------- -->
   </body>
 </html>
