Add contact form

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <section class="my-works">
       <section class="works">
         <section class="work-1">
-          <div class="img-holder"></div>
+          <div class="img-holder">
+          </div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
@@ -226,5 +227,46 @@
       </div>
     </section>
     <!-- -----------end of mobile version------------- -->
+    <div class="contact-form">
+      <form action="https://formspree.io/f/mdobdvyd" method="post">
+        <div class="form-group">
+          <label for="fullname">Full Name</label>
+          <input type="text" placeholder="Full Name" required name="fullname" maxlength="30">
+        </div>
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input type="email" name="email" id="email" required placeholder="Email Address">
+        </div>
+        <div class="form-group">
+          <label for="message">Leave A Message</label>
+          <textarea name="message" id="message" cols="30" rows="10" maxlength="500" required></textarea>
+        </div>
+        <button type="submit" class="get-in-touch">Get In Touch</button>
+        <img src="../images/Icon - Resizer Handle.svg" alt="image-resize" class="icon-resize">
+      </form>
+      <section class="social-icons">
+        <ul>
+          <li>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-m"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-angellist"></i></a>
+          </li>
+        </ul>
+      </section>
+      <section class="email">
+        <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
+      </section>
+      <img src="./images/Shape.svg" alt="contact-shape" class="contact-shape">
+    </div>
   </body>
 </html>
