--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </div>
     </section>
     <!-- -----------end of mobile version------------- -->
-    <div class="contact-form">
+    <footer class="contact-form">
       <form action="https://formspree.io/f/mdobdvyd" method="post">
         <div class="form-group">
           <label for="fullname">Full Name</label>
@@ -239,10 +239,10 @@
         </div>
         <div class="form-group">
           <label for="message">Leave A Message</label>
-          <textarea name="message" id="message" cols="30" rows="10" maxlength="500" required></textarea>
+          <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
         </div>
         <button type="submit" class="get-in-touch">Get In Touch</button>
-        <img src="../images/Icon - Resizer Handle.svg" alt="image-resize" class="icon-resize">
+        <img src="images/Icon - Resizer Handle.svg" alt="image-resize" class="icon-resize">
       </form>
       <section class="social-icons">
         <ul>
@@ -266,7 +266,7 @@
       <section class="email">
         <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
       </section>
-      <img src="./images/Shape.svg" alt="contact-shape" class="contact-shape">
-    </div>
+      <img src="images/Shape.svg" alt="contact-shape" class="contact-shape">
+  </footer>
   </body>
 </html>
