--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <form action="https://formspree.io/f/mdobdvyd" method="post">
         <div class="form-group">
           <label for="fullname">Full Name</label>
-          <input type="text" placeholder="Full Name" required name="fullname" maxlength="30">
+          <input type="text" placeholder="Full Name" required name="fullname" maxlength="30" id="fullname">
         </div>
         <div class="form-group">
           <label for="email">Email Address</label>
@@ -242,7 +242,7 @@
           <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
         </div>
         <button type="submit" class="get-in-touch">Get In Touch</button>
-        <img src="images/Icon - Resizer Handle.svg" alt="image-resize" class="icon-resize">
+        <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize">
       </form>
       <section class="social-icons">
         <ul>
