Update background image position and hover effect to the button

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <label for="message">Leave A Message</label>
           <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
         </div>
-        <button type="submit" class="get-in-touch">Get In Touch</button>
+        <button type="submit" class="get-in-touch">Get in touch</button>
         <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize">
       </form>
       <section class="social-icons">
