Add style to social icons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <div class="home-content">
         <section class="primary">
-          <h1>Hi there. I’m Yayner</h1>
+          <h2>Hey there. I’m yayner</h2>
           <h2 class="software-dev">I’m a software developer</h2>
         </section>
         <section class="supporting">
@@ -48,23 +48,23 @@
         <section class="social-icons">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl" ></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-solid fa-m"></i></a>
+              <a href="#"><i class="fa-solid fa-m fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-angellist"></i></a>
+              <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
             </li>
           </ul>
         </section>
-        <img src="images/Action.svg" alt="action" />
+        <img src="images/Action.svg" alt="action" class="action" />
         <div class="my-recent-works">
           <h3>My Recent Works</h3>
           <img src="images/Indicator.svg" alt="Indicator" />
@@ -247,19 +247,19 @@
       <section class="social-icons">
         <ul>
           <li>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-m"></i></a>
+            <a href="#"><i class="fa-solid fa-m fa-xl"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-angellist"></i></a>
+            <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
           </li>
         </ul>
       </section>
