adjust image position

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="social-icons">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter fa-xl" ></i></a>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
@@ -75,8 +75,7 @@
     <section class="my-works">
       <section class="works">
         <section class="work-1">
-          <div class="img-holder">
-          </div>
+          <div class="img-holder"></div>
           <div class="posts">
             <h2>Multi-Post Stories Gain+Glory</h2>
             <div class="flex-post">
@@ -231,18 +230,43 @@
       <form action="https://formspree.io/f/mdobdvyd" method="post">
         <div class="form-group">
           <label for="fullname">Full Name</label>
-          <input type="text" placeholder="Full Name" required name="fullname" maxlength="30" id="fullname">
+          <input
+            type="text"
+            placeholder="Full Name"
+            required
+            name="fullname"
+            maxlength="30"
+            id="fullname"
+          />
         </div>
         <div class="form-group">
           <label for="email">Email Address</label>
-          <input type="email" name="email" id="email" required placeholder="Email Address">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            required
+            placeholder="Email Address"
+          />
         </div>
         <div class="form-group">
           <label for="message">Leave A Message</label>
-          <textarea name="message" id="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
+          <textarea
+            name="message"
+            id="message"
+            placeholder="Enter text here"
+            cols="30"
+            rows="10"
+            maxlength="500"
+            required
+          ></textarea>
         </div>
         <button type="submit" class="get-in-touch">Get in touch</button>
-        <img src="images/Icon-ResizerHandle.svg" alt="image-resize" class="icon-resize">
+        <img
+          src="images/Icon-ResizerHandle.svg"
+          alt="image-resize"
+          class="icon-resize"
+        />
       </form>
       <section class="social-icons">
         <ul>
@@ -266,7 +290,7 @@
       <section class="email">
         <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
       </section>
-      <img src="images/Shape.svg" alt="contact-shape" class="contact-shape">
-  </footer>
+      <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
+    </footer>
   </body>
 </html>
