Add required change

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               />
             </form>
           </div>
-          <img
+          <!-- <img
             src="images/contactillus-1.svg"
             alt="illustration-image"
             class="contact-illus-1"
@@ -310,7 +310,7 @@
             src="images/contact-illus-2.svg"
             alt="illustration-image"
             class="contact-illus-2"
-          />
+          /> -->
           <hr />
           <section class="social-icons">
             <ul>
