minor changes add

--- a/index.html
+++ b/index.html
@@ -233,11 +233,12 @@
             <section class="contact-me">
               <div class="contact-me-content">
                 <h3>
-                  I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+                  I'm always interested in hearing about new projects, so if
+                  you'd like to chat please get in touch.
                 </h3>
               </div>
             </section>
-            <form action="https://formspree.io/f/mdobdvyd" method="post">
+            <form action="https://formspree.io/f/mgedlogq" method="POST">
               <div class="form-group">
                 <label for="fullname">Full Name</label>
                 <input
@@ -323,9 +324,12 @@
           </section>
           <section class="email">
             <a href="mailto:yayner2002@gmail.com">Yayner2002@gmail.com</a>
-            
           </section>
-          <img src="images/Shape.svg" alt="contact-shape" class="contact-shape" />
+          <img
+            src="images/Shape.svg"
+            alt="contact-shape"
+            class="contact-shape"
+          />
         </section>
       </div>
     </div>
