--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </h3>
               </div>
             </section>
-            <form action="https://formspree.io/f/mgedlogq" method="POST">
+            <form action="https://formspree.io/f/mdobdvyd" method="post">
               <div class="form-group">
                 <label for="fullname">Full Name</label>
                 <input
