Add app screenshot

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </section>
           <section class="supporting">
             <h3>
-              I can help you build a any kind of product,feature or website Look
+              I can help you build any kind of product,feature or website Look
               through some of my work and experience! If you like what you see
               and have a project you need coded, don’t hestiate to contact me.
             </h3>
