--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio setup and mobile version skeleton</title>
+    <title>yayner's portfolio home page</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,7 +53,7 @@
               and have a project you need coded, don’t hestiate to contact me.
             </h3>
           </section>
-          <section class="social-icons">
+          <section class="social-icons small-screen">
             <ul>
               <li>
                 <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
@@ -62,13 +62,33 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa-solid fa-m fa-xl"></i></a>
+                <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+              </li>
+            </ul>
+          </section>
+          <section class="social-icons desktop-screen">
+            <ul>
+              <li>
+                <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+              </li>
+              <li>
+                
+                <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/m.png" alt="m letter icon"></a>
               </li>
             </ul>
           </section>
@@ -303,7 +323,27 @@
             </form>
           </div>
           <hr />
-          <section class="social-icons">
+          <section class="social-icons desktop-screen">
+            <ul>
+              <li>
+                <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
+              </li>
+              <li>
+                
+                <a href="#"><i class="fa-brands fa-angellist fa-xl"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/m.png" alt="m letter icon"></a>
+              </li>
+            </ul>
+          </section>
+          <section class="social-icons small-screen">
             <ul>
               <li>
                 <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
@@ -312,7 +352,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin-in fa-xl"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa-solid fa-m fa-xl"></i></a>
+                <a href="#"><i><img src="images/m.png" alt="letter a icon" class="letter-m-icon"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
